@@ -64,6 +64,9 @@ Core and builtins
 Library
 -------
 
+- Correction of patch #1455898: In the mbcs decoder, set final=False
+  for stream decoder, but final=True for the decode function.
+
 - os.urandom no longer masks unrelated exceptions like SystemExit or
   KeyboardInterrupt.
 
